--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+# Server
+server.port=8080
+server.servlet.context-path=/
+# Jpa settings
+spring.jpa.hibernate.ddl-auto=update
+# Datasource
+spring.datasource.url=jdbc:mysql://localhost/user_service
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+# Security
+oauth.jwt.secret=secret_key
