--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -9,5 +9,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+# Seed
+seed.data=false
 # Security
 oauth.jwt.secret=secret_key
+spring.security.user.name=user
+spring.security.user.password=user
