--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -15,3 +15,16 @@ seed.data=false
 oauth.jwt.secret=secret_key
 spring.security.user.name=user
 spring.security.user.password=user
+# Email
+async.sendEmails=send_emails
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=MAIL
+spring.mail.password=PASSWORD
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
