--- a/appointment-service/src/main/resources/application.properties
+++ b/appointment-service/src/main/resources/application.properties
@@ -15,3 +15,9 @@ seed.data=false
 oauth.jwt.secret=secret_key
 spring.security.user.name=user
 spring.security.user.password=user
+# ActiveMQ
+amq.url=tcp://localhost:61616
+amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
+spring.activemq.broker-url=${amq.url}${amq.queryParameters}
+async.notifications=notifications
+spring.profiles.active=private
