updated appointmentservice and some fixes

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -19,15 +19,11 @@ spring.security.user.password=user
 async.sendEmails=send_emails
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=MAIL
-spring.mail.password=PASSWORD
+spring.mail.username=ahileyteretana@gmail.com
+spring.mail.password=klupazabenc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
 # ActiveMQ
 amq.url=tcp://localhost:61616
 amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
