Schedule notification implemented

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -20,10 +20,9 @@ async.sendEmails=send_emails
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ahileyteretana@gmail.com
-spring.mail.password=klupazabenc
+spring.mail.password=yfaq llrt yorh vynm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
 # ActiveMQ
 amq.url=tcp://localhost:61616
 amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
