--- a/front-react/front/.env
+++ b/front-react/front/.env
@@ -3,4 +3,4 @@ REACT_APP_APPOINTMENT_SERVICE_URL=http://localhost:8081/appointments
 REACT_APP_RESERVATION_SERVICE_URL=http://localhost:8081/reservations
 REACT_APP_TRAINING_SERVICE_URL=http://localhost:8081/trainings
 REACT_APP_HALL_SERVICE_URL=http://localhost:8081/halls
-REACT_APP_NOTIFICATION_SERVICE_URL=http://localhost:8082
+REACT_APP_NOTIFICATION_SERVICE_URL=http://localhost:8082/notification
