--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 amq.url=tcp://localhost:61616
 amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
 spring.activemq.broker-url=${amq.url}${amq.queryParameters}
+# Eureka
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.fetchRegistry=true
