--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -22,3 +22,7 @@ amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeli
 spring.activemq.broker-url=${amq.url}${amq.queryParameters}
 async.sendEmails=send_emails
 spring.profiles.active=private
+# Eureka
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.fetchRegistry=true
