--- a/front-react/front/package.json
+++ b/front-react/front/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.7",
+    "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/styled-components": "^5.1.34",
     "styled-components": "^5.3.11"
   }
